# insa-scan

./: .gitignore  Cargo.toml  Dockerfile  README.md  bootstrap.sh  build-release.sh  history.csv
docker-files/: bootstrap.sh  insa-ovpn-tun-ca.ovpn
site/: index.html  pattern.html  script.js  style.css  test.html
src/: main.rs
