[package]
name = "insa-scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13", features = ["full"] }
chrono = "0.4"
futures = "0.3"
string-tools = "0.1"
progress_bar = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
